--- a/les_3_spring_mvc/src/main/webapp/WEB-INF/views/products.html
+++ b/les_3_spring_mvc/src/main/webapp/WEB-INF/views/products.html
@@ -55,7 +55,7 @@
           <th scope="row" th:text="${product.cost}">1</th>
           <td>
             <a class="btn btn-success" th:href="@{/product/{id}(id = ${product.id})}"><i class="fas fa-edit"></i></a>
-            <a class="btn btn-danger" href="#"><i class="far fa-trash-alt"></i></a>
+            <a class="btn btn-danger" th:href="@{/product/delete/{id}(id = ${product.id})}"><i class="far fa-trash-alt"></i></a>
           </td>
         </tr>
         </tbody>
