--- a/les_3_spring_mvc/src/main/webapp/WEB-INF/views/product_form.html
+++ b/les_3_spring_mvc/src/main/webapp/WEB-INF/views/product_form.html
@@ -41,7 +41,7 @@
                     <label>Name</label>
                     <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="Enter product name">
                     <label>Cost</label>
-                    <input type="text" class="form-control" id="cost" th:field="*{cost}" placeholder="Enter product cost">
+                    <input type="number" class="form-control" id="cost" th:field="*{cost}" placeholder="Enter product cost">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
@@ -62,3 +62,4 @@
         crossorigin="anonymous"></script>
 
 </body>
+</html>
