--- a/less_4_spring_boot/src/main/resources/templates/products.html
+++ b/less_4_spring_boot/src/main/resources/templates/products.html
@@ -64,18 +64,9 @@
       <table class="table table-bordered my-2">
         <thead>
         <tr>
-          <th scope="col">Id
-            <a th:href="@{/product(page=${param.page}, size =${products.size}, productNameFilter = ${param.productNameFilter},
-                minCost = ${param.productMinCostFilter}, maxCost = ${param.productMaxCostFilter}, sortField='id')}"><i class="fa fa-sort-down"></i></a>
-          </th>
-          <th scope="col">Name
-            <a th:href="@{/product(page=${param.page}, size =${products.size}, productNameFilter = ${param.productNameFilter},
-                minCost = ${param.productMinCostFilter}, maxCost = ${param.productMaxCostFilter}, sortField='name')}"><i class="fa fa-sort-down"></i></a>
-          </th>
-          <th scope="col">Cost
-            <a th:href="@{/product(page=${param.page}, size =${products.size}, productNameFilter = ${param.productNameFilter},
-                minCost = ${param.productMinCostFilter}, maxCost = ${param.productMaxCostFilter}, sortField='cost')}"><i class="fa fa-sort-down"></i></a>
-          </th>
+          <th scope="col" th:replace="fragments/sort_header :: sort_header ('Id', 'id')"></th>
+          <th scope="col" th:replace="fragments/sort_header :: sort_header ('Name', 'name')"></th>
+          <th scope="col" th:replace="fragments/sort_header :: sort_header ('Cost', 'cost')"></th>
           <th scope="col">Actions</th>
         </tr>
         </thead>
@@ -104,9 +95,9 @@
       <nav aria-label="...">
         <ul class="pagination">
 
-          <li class="page-item" th:classappend="${products.isFirst()} ? 'disable' : 'active'">
+          <li class="page-item" th:classappend="${products.isFirst()} ? 'disabled' : 'active'">
             <a class="page-link"
-               th:href="@{/product(page-1=${param.page}, size =${products.size}, productNameFilter = ${param.productNameFilter},
+               th:href="@{/product(page=${products.number}, size =${products.size}, productNameFilter = ${param.productNameFilter},
                 minCost = ${param.productMinCostFilter}, maxCost = ${param.productMaxCostFilter}, sortField=${param.sortField})}"
                tabindex="-1">Previous</a>
           </li>
@@ -122,9 +113,9 @@
           </li>
 
 
-          <li class="page-item" th:classappend="${products.isLast()} ? 'disable' : 'active'">
+          <li class="page-item" th:classappend="${products.isLast()} ? 'disabled' : 'active'">
             <a class="page-link"
-               th:href="@{/product(page+1=${param.page}, size =${products.size}, productNameFilter = ${param.productNameFilter},
+               th:href="@{/product(page=${products.number+2}, size =${products.size}, productNameFilter = ${param.productNameFilter},
                 minCost = ${param.productMinCostFilter}, maxCost = ${param.productMaxCostFilter}, sortField=${param.sortField})}"
             >Next</a>
           </li>
